# CoderHouse_DataScience

./: README.md  coderouse_datadcience_entrega_1.ipynb  expenses.txt  media_aritmetica.py
atividade/: Desafio_Numeros.py
data_analytics/: readme.md  water_pollution_disease.pbix
python/: README.md
python/ClientesDanielEduardodoCarmo/: MIT License.txt  README.md  pyproject.toml  setup.py
python/ClientesDanielEduardodoCarmo/src/ClientesDanielEduardodoCarmo/: __init__.py  clientes.py
python/ClientesDanielEduardodoCarmo/src/ClientesDanielEduardodoCarmo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/Pré entrega 1 -Monte seu login/: MonteSeuLogin+Carmo.py  readme.md
python/atividade/: Desafio_Slicing.py
python/desafios_complementares/: 1-figuras.py  2-calculadora.py  3-gestao_de_funcionários.py  4-a_biblioteca.py  loja_on-line.py
python/desafios_complementares/Arquivos/: 1 -  Gravando-despesas.py  2 - Gestão de tarefas pendentes (com persistência-de-dados.py  3 - Registro-de-qualificacao.py  expenses.json  grades.json
python/unidade-4-fluxo/: 1-exercicio.py  10-exercicio.py  2-exercicio.py  3-exercicio.py  4-exercicio.py  5-exercicio.py  6-exercicio.py  7-exercicio.py  8-exercicio.py  9-exercicio.py
unidade-4-fluxo/: 1-exercicio.py
